fix: spacing issue

--- a/style/challenge-style.scss
+++ b/style/challenge-style.scss
@@ -92,9 +92,9 @@
   .mb-24 {
     margin-bottom: 2.4rem;
   }
-  
+
   .countdown {
-    margin-top: 2.4rem;
+    margin-top: 3.2rem;
     margin-bottom: 3.2rem;
     background-color: $dark-blue;
     padding: 1.6rem;
